--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="chenmengdx.gitHub.io : This is my personal page">
+    <meta name="description" content="chenmengdx.github.io : This is my personal page">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>chenmengdx.gitHub.io</title>
+    <title>chenmengdx.github.io</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/chenmengdx">View on GitHub</a>
 
-          <h1 id="project_title">chenmengdx.gitHub.io</h1>
+          <h1 id="project_title">chenmengdx.github.io</h1>
           <h2 id="project_tagline">This is my personal page</h2>
 
         </header>
@@ -27,30 +27,53 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="meng-chen-陈蒙" class="anchor" href="#meng-chen-%E9%99%88%E8%92%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Meng CHEN (陈蒙)</strong>
+</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h2>
+<a id="brief-biography" class="anchor" href="#brief-biography" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief Biography</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>I'm currently a Research Scientist at <strong>Dragon ASR Research Department</strong> of Nuance Communications. My research focus on Language Modeling and Understanding. The specific application scenario includes Automatic Speech Recognition, Mobile Text Input System, and Computer Assisted Language Learning etc. 
+I received my Master of Science Degree from University of Chinese Academy of Sciences in 2012. My supervisor is Prof. Helen Meng. I mainly worked with Dr. Lang Wang and Dr. Dean Luo on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from University of Science &amp; Technology Beijing. I was a Assistant Researcher at Sogou Speech Team from 2012 to 2013. I was also an Intern in Microsoft China in 2009.</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h2>
+<a id="publications" class="anchor" href="#publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h2>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<ul>
+<li>
+<strong>Meng Chen</strong>, “Re-ranking Chinese Cloud Text Input Prediction with RNNLM”, in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
+<li>Ning Han, <strong>Meng Chen</strong>, and Nan He, "Collect and Filter Weibo for Chinese ALM Training Corpus", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
+<li>
+<strong>Meng Chen</strong> and Qi Zhang, "Chinese Cloud Text Input Prediction: From Core &amp; Linguistic Perspective", in Nuance Research Conference 2015 (NRC 2015), 2015. Montreal, Canada.</li>
+<li>
+<strong>Meng Chen</strong>, Yang Song and Lan Wang, "Adapted Language Modeling for Recognition of Retelling Story in Language Learning", Proceedings of 2012 International conference on Audio, Language and Image Processing(ICALIP 2012). Pp. 449-453, 2012.7.16-18, Shanghai China.</li>
+<li>
+<strong>Meng Chen</strong>, Dean Luo and Lan Wang. "Automatic Scoring in a Task of Retelling Stories for Language Learners". Proceedings of the 15th World Multi-conference on Systemics, Cybernetics and Informatics(WMSCI 2011). Pp. 289-292, July 2011 Orlando, FL, United States.</li>
+</ul>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="thesis" class="anchor" href="#thesis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Thesis</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<ul>
+<li>Master Thesis: Research on Automatic Pronunciation Scoring</li>
+<li>Bachelor Thesis: In-car Automatic Speech Recognition</li>
+</ul>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h2>
+<a id="contact-information" class="anchor" href="#contact-information" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information</h2>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Email: <a href="mailto:chenmengdx@gmail.com">chenmengdx@gmail.com</a>
+</li>
+<li>WeChat: chenmengdx</li>
+<li>LinkedIn: <a href="https://www.linkedin.com/in/meng-chen-50547a3a">Find Me at Linked In</a>
+</li>
+<li>Address:
+Unit 502-505 Floor of ONE INDIGO
+20 Jiuxianqiao Road, Chaoyang District
+Beijing, China</li>
+</ul>
       </section>
     </div>
 
