Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="chenmengdx.github.io : This is my personal page">
+    <meta name="description" content="Meng CHEN (陈蒙) : Opportunities are only for the prepared minds.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>chenmengdx.github.io</title>
+    <title>Meng CHEN (陈蒙)</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/chenmengdx">View on GitHub</a>
 
-          <h1 id="project_title">chenmengdx.github.io</h1>
-          <h2 id="project_tagline">This is my personal page</h2>
+          <h1 id="project_title">Meng CHEN (陈蒙)</h1>
+          <h2 id="project_tagline">Opportunities are only for the prepared minds.</h2>
 
         </header>
     </div>
@@ -27,22 +27,18 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="meng-chen-陈蒙" class="anchor" href="#meng-chen-%E9%99%88%E8%92%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Meng CHEN (陈蒙)</strong>
-</h1>
-
-<h2>
+        <h2>
 <a id="brief-biography" class="anchor" href="#brief-biography" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief Biography</h2>
 
-<p>I'm currently a Research Scientist at <strong>Dragon ASR Research Department</strong> of Nuance Communications. My research focus on Language Modeling and Understanding. The specific application scenario includes Automatic Speech Recognition, Mobile Text Input System, and Computer Assisted Language Learning etc. 
-I received my Master of Science Degree from University of Chinese Academy of Sciences in 2012. My supervisor is Prof. Helen Meng. I mainly worked with Dr. Lang Wang and Dr. Dean Luo on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from University of Science &amp; Technology Beijing. I was a Assistant Researcher at Sogou Speech Team from 2012 to 2013. I was also an Intern in Microsoft China in 2009.</p>
+<p>I'm currently a <strong>Research Scientist</strong> at <strong>Dragon ASR Research Department</strong> of <a href="http://www.nuance.com/index.htm">Nuance Communications</a>. My research focus on <strong>Language Modeling and Understanding</strong>. The specific application scenario includes <strong>Automatic Speech Recognition</strong>, <strong>Mobile Text Input System</strong>, and <strong>Computer Assisted Language Learning</strong> etc. 
+I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">University of Chinese Academy of Sciences</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html%20">Prof. Helen Meng</a>. I mainly worked with <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/200907/t20090713_2066858.html">Dr. Lan Wang</a> and <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/201103/t20110317_3087387.html">Dr. Dean Luo</a> on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science &amp; Technology Beijing</a>. I was a Assistant Researcher at Sogou Speech Team from 2012 to 2013. I was also an Intern in Microsoft China in 2009.</p>
 
 <h2>
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h2>
 
 <ul>
 <li>
-<strong>Meng Chen</strong>, “Re-ranking Chinese Cloud Text Input Prediction with RNNLM”, in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
+<strong>Meng Chen</strong>, "Re-ranking Chinese Cloud Text Input Prediction with RNNLM", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
 <li>Ning Han, <strong>Meng Chen</strong>, and Nan He, "Collect and Filter Weibo for Chinese ALM Training Corpus", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
 <li>
 <strong>Meng Chen</strong> and Qi Zhang, "Chinese Cloud Text Input Prediction: From Core &amp; Linguistic Perspective", in Nuance Research Conference 2015 (NRC 2015), 2015. Montreal, Canada.</li>
