Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,26 +27,34 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h2>
+        <p><img src="http://img2.ph.126.net/b3ZPoXTYfZmKTon3uFZDDA==/4906390319143504316.jpg" alt="My Photo"></p>
+
+<hr>
+
+<h2>
 <a id="brief-biography" class="anchor" href="#brief-biography" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Brief Biography</h2>
 
 <p>I'm currently a <strong>Research Scientist</strong> at <strong>Dragon ASR Research Department</strong> of <a href="http://www.nuance.com/index.htm">Nuance Communications</a>. My research focus on <strong>Language Modeling and Understanding</strong>. The specific application scenario includes <strong>Automatic Speech Recognition</strong>, <strong>Mobile Text Input System</strong>, and <strong>Computer Assisted Language Learning</strong> etc. 
 I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">University of Chinese Academy of Sciences</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html%20">Prof. Helen Meng</a>. I mainly worked with <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/200907/t20090713_2066858.html">Dr. Lan Wang</a> and <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/201103/t20110317_3087387.html">Dr. Dean Luo</a> on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science &amp; Technology Beijing</a>. I was a Assistant Researcher at Sogou Speech Team from 2012 to 2013. I was also an Intern in Microsoft China in 2009.</p>
+
+<hr>
 
 <h2>
 <a id="publications" class="anchor" href="#publications" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Publications</h2>
 
 <ul>
 <li>
-<strong>Meng Chen</strong>, "Re-ranking Chinese Cloud Text Input Prediction with RNNLM", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
-<li>Ning Han, <strong>Meng Chen</strong>, and Nan He, "Collect and Filter Weibo for Chinese ALM Training Corpus", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
+<strong>Meng Chen</strong>, "<em>Re-ranking Chinese Cloud Text Input Prediction with RNNLM</em>", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
+<li>Ning Han, <strong>Meng Chen</strong>, and Nan He, "<em>Collect and Filter Weibo for Chinese ALM Training Corpus</em>", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
 <li>
-<strong>Meng Chen</strong> and Qi Zhang, "Chinese Cloud Text Input Prediction: From Core &amp; Linguistic Perspective", in Nuance Research Conference 2015 (NRC 2015), 2015. Montreal, Canada.</li>
+<strong>Meng Chen</strong> and Qi Zhang, "<em>Chinese Cloud Text Input Prediction: From Core &amp; Linguistic Perspective</em>", in Nuance Research Conference 2015 (NRC 2015), 2015. Montreal, Canada.</li>
 <li>
-<strong>Meng Chen</strong>, Yang Song and Lan Wang, "Adapted Language Modeling for Recognition of Retelling Story in Language Learning", Proceedings of 2012 International conference on Audio, Language and Image Processing(ICALIP 2012). Pp. 449-453, 2012.7.16-18, Shanghai China.</li>
+<strong>Meng Chen</strong>, Yang Song and Lan Wang, "<em>Adapted Language Modeling for Recognition of Retelling Story in Language Learning</em>", Proceedings of 2012 International Conference on Audio, Language and Image Processing(ICALIP 2012). Pp. 449-453, 2012.7.16-18, Shanghai China.</li>
 <li>
-<strong>Meng Chen</strong>, Dean Luo and Lan Wang. "Automatic Scoring in a Task of Retelling Stories for Language Learners". Proceedings of the 15th World Multi-conference on Systemics, Cybernetics and Informatics(WMSCI 2011). Pp. 289-292, July 2011 Orlando, FL, United States.</li>
+<strong>Meng Chen</strong>, Dean Luo and Lan Wang. "<em>Automatic Scoring in a Task of Retelling Stories for Language Learners</em>". Proceedings of the 15th World Multi-conference on Systemics, Cybernetics and Informatics(WMSCI 2011). Pp. 289-292, July 2011 Orlando, FL, United States.</li>
 </ul>
+
+<hr>
 
 <h2>
 <a id="thesis" class="anchor" href="#thesis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Thesis</h2>
@@ -55,6 +63,8 @@ I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">Un
 <li>Master Thesis: Research on Automatic Pronunciation Scoring</li>
 <li>Bachelor Thesis: In-car Automatic Speech Recognition</li>
 </ul>
+
+<hr>
 
 <h2>
 <a id="contact-information" class="anchor" href="#contact-information" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information</h2>
@@ -65,10 +75,7 @@ I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">Un
 <li>WeChat: chenmengdx</li>
 <li>LinkedIn: <a href="https://www.linkedin.com/in/meng-chen-50547a3a">Find Me at Linked In</a>
 </li>
-<li>Address:
-Unit 502-505 Floor of ONE INDIGO
-20 Jiuxianqiao Road, Chaoyang District
-Beijing, China</li>
+<li>Address: Unit 502-505 Floor of ONE INDIGO, 20 Jiuxianqiao Road, Chaoyang District,Beijing, China</li>
 </ul>
       </section>
     </div>
