Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@ I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">Un
 
 <ul>
 <li>
-<strong>Meng Chen</strong>, "<em>Re-ranking Chinese Cloud Text Input Prediction with RNNLM</em>", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
-<li>Ning Han, <strong>Meng Chen</strong>, and Nan He, "<em>Collect and Filter Weibo for Chinese ALM Training Corpus</em>", in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
+<strong>Meng Chen</strong>, <em>"Re-ranking Chinese Cloud Text Input Prediction with RNNLM"</em>, in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
+<li>Ning Han, <strong>Meng Chen</strong>, and Nan He, <em>"Collect and Filter Weibo for Chinese ALM Training Corpus"</em>, in Nuance Research Conference 2016 (NRC 2016), 2016.</li>
 <li>
-<strong>Meng Chen</strong> and Qi Zhang, "<em>Chinese Cloud Text Input Prediction: From Core &amp; Linguistic Perspective</em>", in Nuance Research Conference 2015 (NRC 2015), 2015. Montreal, Canada.</li>
+<strong>Meng Chen</strong> and Qi Zhang, <em>"Chinese Cloud Text Input Prediction: From Core &amp; Linguistic Perspective"</em>, in Nuance Research Conference 2015 (NRC 2015), 2015. Montreal, Canada.</li>
 <li>
-<strong>Meng Chen</strong>, Yang Song and Lan Wang, "<em>Adapted Language Modeling for Recognition of Retelling Story in Language Learning</em>", Proceedings of 2012 International Conference on Audio, Language and Image Processing(ICALIP 2012). Pp. 449-453, 2012.7.16-18, Shanghai China.</li>
+<strong>Meng Chen</strong>, Yang Song and Lan Wang, <em>"Adapted Language Modeling for Recognition of Retelling Story in Language Learning"</em>, Proceedings of 2012 International Conference on Audio, Language and Image Processing(ICALIP 2012). Pp. 449-453, 2012.7.16-18, Shanghai China.</li>
 <li>
-<strong>Meng Chen</strong>, Dean Luo and Lan Wang. "<em>Automatic Scoring in a Task of Retelling Stories for Language Learners</em>". Proceedings of the 15th World Multi-conference on Systemics, Cybernetics and Informatics(WMSCI 2011). Pp. 289-292, July 2011 Orlando, FL, United States.</li>
+<strong>Meng Chen</strong>, Dean Luo and Lan Wang. <em>"Automatic Scoring in a Task of Retelling Stories for Language Learners"</em>. Proceedings of the 15th World Multi-conference on Systemics, Cybernetics and Informatics(WMSCI 2011). Pp. 289-292, July 2011 Orlando, FL, United States.</li>
 </ul>
 
 <hr>
