--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Meng CHEN [陈蒙] : Opportunities are only for the prepared minds.">
+    <meta name="description" content="Meng Chen [陈蒙] : Opportunities are only for the prepared minds!">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Meng CHEN [陈蒙]</title>
+    <title>Meng Chen [陈蒙]</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/chenmengdx">View on GitHub</a>
 
-          <h1 id="project_title">Meng CHEN [陈蒙]</h1>
-          <h2 id="project_tagline">Opportunities are only for the prepared minds.</h2>
+          <h1 id="project_title">Meng Chen [陈蒙]</h1>
+          <h2 id="project_tagline">Opportunities are only for the prepared minds!</h2>
 
         </header>
     </div>
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="http://img2.ph.126.net/b3ZPoXTYfZmKTon3uFZDDA==/4906390319143504316.jpg" alt="My Photo"></p>
+        <p><img src="http://img2.ph.126.net/b3ZPoXTYfZmKTon3uFZDDA==/4906390319143504316.jpg%20=700x" alt="My Photo"></p>
 
 <p><img src="http://img2.ph.126.net/b3ZPoXTYfZmKTon3uFZDDA==/4906390319143504316.jpg"></p>
 
