--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="http://img2.ph.126.net/b3ZPoXTYfZmKTon3uFZDDA==/4906390319143504316.jpg%20=700x" alt="My Photo"></p>
+        <p><img src="chenmengdx.github.io/images/me.png%20=700x" alt="My Photo"></p>
 
 <p><img src="http://img2.ph.126.net/b3ZPoXTYfZmKTon3uFZDDA==/4906390319143504316.jpg"></p>
 
