--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="chenmengdx.github.io/images/me.png%20=250x" alt="My Photo">
-<img src="chenmengdx.github.io/images/me.png" alt="My Photo"></p>
+        <p><img src="chenmengdx.github.io/images/me.png" alt="My Photo" width="200" height="200"></p>
 
 <hr>
 
