Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="chenmengdx.github.io/images/me.png" alt="My Photo" width="650" height="431"></p>
+        <p><img src="chenmengdx.github.io/images/me.png" alt="My Photo" width="630" height="418"></p>
 
 <hr>
 
@@ -49,9 +49,9 @@ I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">Un
 <li>
 <strong>Meng Chen</strong> and Qi Zhang, <em>"Chinese Cloud Text Input Prediction: From Core &amp; Linguistic Perspective"</em>, in Nuance Research Conference 2015 (NRC 2015), 2015. Montreal, Canada.</li>
 <li>
-<strong>Meng Chen</strong>, Yang Song and Lan Wang, <em>"Adapted Language Modeling for Recognition of Retelling Story in Language Learning"</em>, Proceedings of 2012 International Conference on Audio, Language and Image Processing(ICALIP 2012). Pp. 449-453, 2012.7.16-18, Shanghai China.</li>
+<strong>Meng Chen</strong>, Yang Song and Lan Wang, <em>"Adapted Language Modeling for Recognition of Retelling Story in Language Learning"</em>, Proceedings of 2012 International Conference on Audio, Language and Image Processing(ICALIP 2012). Pp. 449-453, 2012.7.16-18, Shanghai China. [<a href="chenmengdx.github.io/papers/ICALIP2012.pdf">pdf</a>]</li>
 <li>
-<strong>Meng Chen</strong>, Dean Luo and Lan Wang. <em>"Automatic Scoring in a Task of Retelling Stories for Language Learners"</em>. Proceedings of the 15th World Multi-conference on Systemics, Cybernetics and Informatics(WMSCI 2011). Pp. 289-292, July 2011 Orlando, FL, United States.</li>
+<strong>Meng Chen</strong>, Dean Luo and Lan Wang. <em>"Automatic Scoring in a Task of Retelling Stories for Language Learners"</em>. Proceedings of the 15th World Multi-conference on Systemics, Cybernetics and Informatics(WMSCI 2011). Pp. 289-292, July 2011 Orlando, FL, United States. [<a href="chenmengdx.github.io/papers/WMSCI2011.pdf">pdf</a>]</li>
 </ul>
 
 <hr>
@@ -60,8 +60,8 @@ I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">Un
 <a id="thesis" class="anchor" href="#thesis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Thesis</h2>
 
 <ul>
-<li>Master Thesis: Research on Automatic Pronunciation Scoring</li>
-<li>Bachelor Thesis: In-car Automatic Speech Recognition</li>
+<li>Master Thesis: <em>Research on Automatic Scoring of Pronunciation in Oral English Test</em> [<a href="chenmengdx.github.io/papers/Master_thesis.pdf">pdf</a>]</li>
+<li>Bachelor Thesis: <em>Research on Speech Recognition in the Noise Environment</em> [<a href="chenmengdx.github.io/papers/Bachelor_thesis.pdf">pdf</a>]</li>
 </ul>
 
 <hr>
@@ -73,7 +73,7 @@ I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">Un
 <li>Email: <a href="mailto:chenmengdx@gmail.com">chenmengdx@gmail.com</a>
 </li>
 <li>WeChat: chenmengdx</li>
-<li>LinkedIn: <a href="https://www.linkedin.com/in/meng-chen-50547a3a">Find Me at Linked In</a>
+<li>LinkedIn: <a href="https://www.linkedin.com/in/meng-chen-50547a3a">Find Me at LinkedIn</a>
 </li>
 <li>Address: Unit 502-505 Floor of ONE INDIGO, 20 Jiuxianqiao Road, Chaoyang District,Beijing, China</li>
 </ul>
