--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: default
 	
 <h1>Welcome</h1>
 	
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc blandit mattis nulla eu cursus. Fusce finibus, orci sit amet tincidunt fermentum, risus ante pharetra nisi, eget tempus tellus tellus ut est. Nunc tempus cursus arcu mattis ultricies. Cras volutpat purus et lectus facilisis tempor. Suspendisse at lorem feugiat, feugiat massa vel, scelerisque dolor. Proin justo nisl, mattis eu sapien in, efficitur fringilla nulla. Phasellus placerat, lacus in venenatis tristique, risus dolor eleifend felis, vitae finibus augue nibh ut libero. Morbi sit amet tincidunt lorem.</p>
+<p>Hi, I'm Meng Chen, and my Chinese name is 陈蒙.</p>
+<p>This is my personal page, where you can find information on my research and publications. Also, I might write some blogs and post and photos here.</p>
+<p>Currently, I'm a Research Scientist at Dragon ASR Research Department of Nuance Communications. My research focus on Language Modeling and Understanding. I like to propose innovative ideas, and love to learn new technologies. In my spare time, I love traveling, reading, and playing football. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of MUFC(Manchester United Football Club)</p>
 
 </div>
