update about page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ layout: default
 	
 <p>Hi, I'm Meng Chen, and my Chinese name is 陈蒙.</p>
 <p>This is my personal page, where you can find information on my research and publications. Also, I might write some blogs and post and photos here.</p>
-<p>Currently, I'm a Research Scientist at Dragon ASR Research Department of Nuance Communications. My research focus on Language Modeling and Understanding. I like to propose innovative ideas, and love to learn new technologies. In my spare time, I love traveling, reading, and playing football. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of MUFC(Manchester United Football Club)</p>
+<p>Currently, I'm a Research Scientist at Dragon ASR Research Department of Nuance Communications. My research focus on Language Modeling and Understanding. I like to propose innovative ideas, and love to learn new technologies. In my spare time, I love traveling, reading, and playing football. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of MUFC (Manchester United Football Club).</p>
 
 </div>
