--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 <h1>Welcome</h1>
 	
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
-<p>This is my personal page, where you can find information on my research and publications. Also, I might write some blogs and post and photos here.</p>
-<p>Currently, I'm a Research Scientist at <b>Dragon ASR Research Department</b> of <a href="http://www.nuance.com">Nuance Communications</a>. My research focus on <b>Language Modeling and Understanding</b>. I like to propose innovative ideas, and love to learn new technologies. In my spare time, I love traveling, reading, and playing football. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of <a href="http://www.manutd.com/">MUFC (Manchester United Football Club)</a>.</p>
+<p>This is my personal page, where you can find information on my research and publications. Also, I might write some blogs and post some photos here.</p>
+<p>Currently, I'm a <b>Research Scientist</b> at <b>Dragon ASR Research Department</b> of <a href="http://www.nuance.com">Nuance Communications</a>. My research focus on <b>Language Modeling and Understanding</b>. I like to propose innovative ideas, and love to learn new technologies. In my spare time, I love traveling, reading, and playing football. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of <a href="http://www.manutd.com/">MUFC (Manchester United Football Club)</a>.</p>
 
 </div>
