Fix format of index.html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@ layout: default
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
 <p>This is my personal page, where you can find information on my research and publications. Also, I might write some blogs and post some photos here.</p>
 <p>Currently, I'm a <b>Senior Researcher</b> at <b>Dragon ASR Research Department</b> of <a href="http://www.nuance.com">Nuance Communications</a>. My research focus on <b>Language Modeling and Understanding</b>. I like to propose innovative ideas, and love to learn new technologies. In my spare time, I love traveling, reading, and playing football. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of <a href="http://www.manutd.com/">MUFC (Manchester United Football Club)</a>.</p>
-<p></p>
-<p>I'm also an amateur football player in my spare time, my football career is as follows:</p>
-<p>2016.03 ~ now: Meng Long Football Club (蒙龙足球俱乐部)</p>
-<p>2014.07 ~ 2016.02: Si De Football Club (四得足球俱乐部)</p>
-<p>2012.07 ~ 2013.12: Sogou Football Club (搜狗足球俱乐部)</p>
-<p>2010.08 ~ 2012.05: Lu Guang Football Club (鲁广足球俱乐部)</p>
+</br>
+<p>I'm also an amateur football player in my spare time, my football career is as follows:</br>
+* 2016.03 ~ now: Meng Long Football Club (蒙龙足球俱乐部)</br>
+* 2014.07 ~ 2016.02: Si De Football Club (四得足球俱乐部)</br>
+* 2012.07 ~ 2013.12: Sogou Football Club (搜狗足球俱乐部)</br>
+* 2010.08 ~ 2012.05: Lu Guang Football Club (鲁广足球俱乐部)</br>
+</p>
 
 </div>
