--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@ layout: default
 <h1>Welcome</h1>
 	
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
-<p>This is my personal page, where you can find information on my research and publications. Also, I might write some blogs and post some photos here.</p>
 <p>
-I'm currently a Tech Lead at <a href="http://air.jd.com">JD AI</a> and working with <a href="http://faculty.washington.edu/xiaohe/">Dr. Xiaodong He</a>. I lead a team with 10 FTEs to make effort to some Dialogue Systems and AI for Art projects. Before that, I was a Senior Researcher at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on <b>Computational Linguistics</b> and <b>Automatic Speech Recognition</b>. The specific application scenario includes Dialogue System, Natural Language Generation, and Speech Recognition etc. I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">University of Chinese Academy of Sciences</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. I mainly worked with <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/200907/t20090713_2066858.html">Dr. Lan Wang</a>] and <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/201103/t20110317_3087387.html">Dr. Dean Luo</a> on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science & Technology Beijing</a>. I was an Assistant Researcher at [<a href="https://www.sogou.com">Sogou Speech Team</a> from 2012 to 2013. I was also an Intern in <a href="https://www.microsoft.com/zh-cn">Microsoft</a> in 2009.
+I'm currently a Tech Lead at <a href="http://air.jd.com">JD AI</a> and working with <a href="http://faculty.washington.edu/xiaohe/">Dr. Xiaodong He</a>. I lead a team with 10 FTEs to make effort to some Dialogue Systems and AI for Art projects. Before that, I was a Senior Researcher at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on <b>Computational Linguistics</b> and <b>Automatic Speech Recognition</b>. The specific application scenario includes Dialogue System, Natural Language Generation, and Speech Recognition etc. I received my Master of Science Degree from <a href="http://www.gucas.ac.cn/">University of Chinese Academy of Sciences</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. I mainly worked with <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/200907/t20090713_2066858.html">Dr. Lan Wang</a> and <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/201103/t20110317_3087387.html">Dr. Dean Luo</a> on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science & Technology Beijing</a>. I was an Assistant Researcher at <a href="https://www.sogou.com">Sogou Speech Team</a> from 2012 to 2013. I was also an Intern in <a href="https://www.microsoft.com/zh-cn">Microsoft</a> in 2009.
 </p>
 
 In my spare time, I love traveling, reading, watching movies and playing soccer. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of <a href="http://www.manutd.com/">MUFC (Manchester United Football Club)</a>.</p>
-<p>I'm also an amateur football player in my spare time, my football career is as follows:</br>
+<p>I'm also an amateur football player in my spare time, my football career is as follows: :)</br>
 * 2017.06 ~ now: Old Boys Football Club (老男孩足球俱乐部)</br>
 * 2016.03 ~ 2017.05: Meng Long Football Club (蒙龙足球俱乐部)</br>
 * 2014.07 ~ 2016.02: Si De Football Club (四得足球俱乐部)</br>
 * 2012.07 ~ 2013.12: Sogou Football Club (搜狗足球俱乐部)</br>
 * 2010.08 ~ 2012.05: Lu Guang Football Club (鲁广足球俱乐部)</br>
 </p>
-<img src="/images/me.png" alt="2018@San francisco" />
+<img src="/images/me.jpg" alt="2018@San francisco" />
 </div>
