--- a/index.html
+++ b/index.html
@@ -22,4 +22,11 @@ In my spare time, I love traveling, reading, watching movies and playing soccer.
 * 2010.08 ~ 2012.05: Lu Guang Football Club (鲁广足球俱乐部)</br>
 </p>
 <img src="/images/me.jpg" alt="2018@San francisco" />
+
+<p>Contact Information</p>
+<p>Email: chenmengdx@gmail.com </p>
+<p>WeChat: chenmengdx </p>
+<p>Weibo: [weibo.com/chenmengdx](http://weibo.com/chenmengdx/home?wvr=5&lf=reg) </p>
+<p>LinkedIn: [Find Me at LinkedIn](https://cn.linkedin.com/in/meng-chen-50547a3a) </p>
+
 </div>
