--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@ In my spare time, I love traveling, reading, watching movies and playing soccer.
 </p>
 <img src="/images/me.jpg" alt="2018@San francisco" />
 
-<p>Contact Information</p>
-<p>Email: chenmengdx@gmail.com </p>
-<p>WeChat: chenmengdx </p>
-<p>Weibo: [weibo.com/chenmengdx](http://weibo.com/chenmengdx/home?wvr=5&lf=reg) </p>
-<p>LinkedIn: [Find Me at LinkedIn](https://cn.linkedin.com/in/meng-chen-50547a3a) </p>
+<p>Contact Information </br>
+* Email: chenmengdx@gmail.com </br>
+* WeChat: chenmengdx </br>
+* Weibo: [weibo.com/chenmengdx](http://weibo.com/chenmengdx/home?wvr=5&lf=reg) </br>
+* LinkedIn: [Find Me at LinkedIn](https://cn.linkedin.com/in/meng-chen-50547a3a) </br>
+</p>
 
 </div>
