--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ I'm currently a Tech Lead at <a href="http://air.jd.com">JD AI</a> and working w
 </p>
 
 <p>Contact Information </br>
-* Email: chenmengdx@gmail.com </br>
+* Email: chenmengdx@outlook.com </br>
 * WeChat: chenmengdx </br>
-* Weibo: <a href="http://weibo.com/chenmengdx/home?wvr=5&lf=reg">weibo.com/chenmengdx</a></br>
+* Weibo: <a href="http://weibo.com/chenmengdx">weibo.com/chenmengdx</a></br>
 * LinkedIn: <a href="https://cn.linkedin.com/in/meng-chen-50547a3a">Find Me at LinkedIn</a></br>
 </p>
 
