--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ layout: default
 	
 <h1>Welcome</h1>
 	
+
+<img src="/images/me.jpg" alt="2018@San francisco" />
+img {
+width: 40%;
+}
+
+
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
 <p>
 I'm currently a Tech Lead at <a href="http://air.jd.com">JD AI</a> and working with <a href="http://faculty.washington.edu/xiaohe/">Dr. Xiaodong He</a>. I lead a team to make effort to some Dialogue Systems and AI for Art projects. Before that, I was a Senior Researcher at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on Computational Linguistics and Automatic Speech Recognition. The specific application scenario includes Dialogue System, Natural Language Generation, and Speech Recognition etc. I received my Master of Science Degree from <a href="http://www.ucas.ac.cn/">University of Chinese Academy of Sciences</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. I mainly worked with <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/200907/t20090713_2066858.html">Dr. Lan Wang</a> and <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/201103/t20110317_3087387.html">Dr. Dean Luo</a> on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science & Technology Beijing</a>. I was an Assistant Researcher at <a href="https://www.sogou.com">Sogou Speech Team</a> from 2012 to 2013. I was also an Intern in <a href="https://www.microsoft.com/zh-cn">Microsoft</a> in 2009.
@@ -30,6 +37,5 @@ I'm currently a Tech Lead at <a href="http://air.jd.com">JD AI</a> and working w
 * LinkedIn: <a href="https://cn.linkedin.com/in/meng-chen-50547a3a">Find Me at LinkedIn</a></br>
 </p>
 
-<img src="/images/me.jpg" alt="2018@San francisco" />
 
 </div>
