--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@ layout: default
 <h1>Welcome</h1>
 	
 
-<img src="/images/me.jpg" alt="2018@San francisco" />
-img {
-width: 40%;
-}
+<div style="width:200px; height:200px;">
+
+<img src="/images/me.jpg" style="width:100%;" alt="2018@San francisco"/>
+
+</div>
+
+
 
 
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
