--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@ layout: default
 
 <div class="home">
 	
-<h1>Welcome</h1>
-	
-
-<div style="width:200px; height:200px;">
-
+<div style="width:400px; height:400px;">
 <img src="/images/me.jpg" style="width:100%;" alt="2018@San francisco"/>
-
 </div>
 
-
+<h2>Biography</h2>
 
 
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
