--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@ layout: default
 
 
 <div class="home">
-	
-<div style="width:400px; height:400px;">
-<img src="/images/me.jpg" style="width:100%;" alt="2018@San francisco"/>
-</div>
-
+<img src="/images/me.jpg" style="width:400px; height:400px;" alt="2018@San francisco"/>
 <h2>Biography</h2>
-
 
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
 <p>
