--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 
 
 <div class="home">
-<img src="/images/me.jpg" style="width:400px; height:400px;" alt="2018@San francisco"/>
+<img src="/images/me.jpg" style="width:400px;" alt="2018@San francisco"/>
 <h2>Biography</h2>
 
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
