--- a/index.html
+++ b/index.html
@@ -4,31 +4,27 @@ layout: default
 
 
 
-<img src="/images/me.jpg" style="width:400px;" alt="2018@San francisco"/>
 <div class="home">
-<h2>Biography</h2>
+<h1>Biography</h1>
+<img src="/images/me.jpg" style="width:400px;" alt="2018@San francisco"/>
 
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
 <p>
-I'm currently a Tech Lead at <a href="http://air.jd.com">JD AI</a> and working with <a href="http://faculty.washington.edu/xiaohe/">Dr. Xiaodong He</a>. I lead a team to make effort to some Dialogue Systems and AI for Art projects. Before that, I was a Senior Researcher at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on Computational Linguistics and Automatic Speech Recognition. The specific application scenario includes Dialogue System, Natural Language Generation, and Speech Recognition etc. I received my Master of Science Degree from <a href="http://www.ucas.ac.cn/">University of Chinese Academy of Sciences</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. I mainly worked with <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/200907/t20090713_2066858.html">Dr. Lan Wang</a> and <a href="http://sourcedb.cas.cn/sourcedb_siat_cas/yw/zjrc/201103/t20110317_3087387.html">Dr. Dean Luo</a> on automatic scoring of pronunciation in oral English test during my graduated university. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science & Technology Beijing</a>. I was an Assistant Researcher at <a href="https://www.sogou.com">Sogou Speech Team</a> from 2012 to 2013. I was also an Intern in <a href="https://www.microsoft.com/zh-cn">Microsoft</a> in 2009.
+I'm currently a Research Manager at <a href="http://air.jd.com">JD AI</a> and working with <a href="http://faculty.washington.edu/xiaohe/">Dr. Xiaodong He</a>. I led a team to bulid dialogue systems in industry and explore innovative AI for Art projects. Specifically, we developed the <a href="https://xiaozhi.jd.com/">Alphasales system</a> and <a href="https://yanxi.jd.com/">Yanxi platform</a>. Alphasales is a shopping assistant which can not only answer questions about product, promotion, and shipping etc but also recommend products to customers proactively. Yanxi platform is to help ordinary users to build their own conversational bots within several minutes, which covers both text and speech interaction. For AI and Art, we collaborate with <a href="https://en.wikipedia.org/wiki/Qiu_Zhijie"> Prof. Zhijie Qiu </a> from <a href="https://www.cafa.edu.cn/en/">CAFA, China</a>. In the past few years, we developed the Artistic Mind Map Generator and Emotion-driven Calligraphy Generator, which has been exhibited in several famous international art festivals including Art Electronica Festival 2019, World Internet Conference 2019, Mind the Deep - AI and Art Creation 2019 etc.
 </p>
 
-<p>In my spare time, I love traveling, reading, watching movies and playing soccer. I also has a pet dog, whose name is Robin. At last, don't forget that I'm a loyal fan of <a href="http://www.manutd.com/">MUFC (Manchester United Football Club)</a>.</p>
+<p>
+Before that, I was a Research Scientist at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on computational linguistics and automatic speech recognition.I received my Master of Science Degree from Joint Lab of <a href="http://www.ucas.ac.cn/">University of Chinese Academy of Sciences</a> and <a href="https://www.cuhk.edu.hk">The Chinese University of Hong Kong</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science & Technology Beijing</a>.
+</p>
 
-<p>I'm also an amateur football player in my spare time, my football career is as follows: :)</br>
-* 2017.06 ~ now: Old Boys Football Club (老男孩足球俱乐部)</br>
-* 2016.03 ~ 2017.05: Meng Long Football Club (蒙龙足球俱乐部)</br>
-* 2014.07 ~ 2016.02: Si De Football Club (四得足球俱乐部)</br>
-* 2012.07 ~ 2013.12: Sogou Football Club (搜狗足球俱乐部)</br>
-* 2010.08 ~ 2012.05: Lu Guang Football Club (鲁广足球俱乐部)</br>
+<p>
+In my spare time, I love traveling, reading, watching movies and playing soccer. I'm an amateur soccer player and my soccer career lasts more than 10 years. I'm a loyal fan of <a href="http://www.manutd.com/">Manchester United</a>.
 </p>
 
 <p>Contact Information </br>
 * Email: chenmengdx@outlook.com </br>
 * WeChat: chenmengdx </br>
-* Weibo: <a href="http://weibo.com/chenmengdx">weibo.com/chenmengdx</a></br>
 * LinkedIn: <a href="https://cn.linkedin.com/in/meng-chen-50547a3a">Find Me at LinkedIn</a></br>
 </p>
-
 
 </div>
