--- a/index.html
+++ b/index.html
@@ -5,23 +5,26 @@ layout: default
 
 
 <div class="home">
+
 <h1>Biography</h1>
+
 <img src="/images/me.jpg" style="width:400px;" alt="2018@San francisco"/>
 
 <p>Hi, I'm Meng Chen, and my Chinese name is <b>陈蒙</b>.</p>
+
 <p style="text-align:justify;">
 I'm currently a Research Manager at <a href="http://air.jd.com">JD AI</a> and working with <a href="http://faculty.washington.edu/xiaohe/">Dr. Xiaodong He</a>. I led a team to bulid dialogue systems in industry and explore innovative AI for Art projects. Specifically, we developed the <a href="https://xiaozhi.jd.com/">Alphasales system</a> and <a href="https://yanxi.jd.com/">Yanxi platform</a>. Alphasales is a shopping assistant which can not only answer questions about product, promotion, and shipping etc but also recommend products to customers proactively. Yanxi platform is to help ordinary users to build their own conversational bots within several minutes, which covers both text and speech interaction. For AI and Art, we collaborate with <a href="https://en.wikipedia.org/wiki/Qiu_Zhijie"> Prof. Zhijie Qiu </a> from <a href="https://www.cafa.edu.cn/en/">CAFA, China</a>. In the past few years, we developed the Artistic Mind Map Generator and Emotion-driven Calligraphy Generator, which has been exhibited in several famous international art festivals including Art Electronica Festival 2019, World Internet Conference 2019, Mind the Deep - AI and Art Creation 2019 etc.
 </p>
 
 <p style="text-align:justify;">
-Before that, I was a Research Scientist at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on computational linguistics and automatic speech recognition.I received my Master of Science Degree from Joint Lab of <a href="http://www.ucas.ac.cn/">University of Chinese Academy of Sciences</a> and <a href="https://www.cuhk.edu.hk">The Chinese University of Hong Kong</a> in 2012. My supervisor is <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science & Technology Beijing</a>.
+Before that, I was a Research Scientist at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on computational linguistics and automatic speech recognition.I received my Master of Science Degree from Joint Lab of <a href="http://www.ucas.ac.cn/">University of Chinese Academy of Sciences</a> and <a href="https://www.cuhk.edu.hk">The Chinese University of Hong Kong</a> in 2012. My supervisor was <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. I got my Bachelor of Science Degree in Computer Science from <a href="http://www.ustb.edu.cn/">University of Science & Technology Beijing</a>.
 </p>
 
 <p style="text-align:justify;">
 In my spare time, I love traveling, reading, watching movies and playing soccer. I'm an amateur soccer player and my soccer career lasts more than 10 years. I'm a loyal fan of <a href="http://www.manutd.com/">Manchester United</a>.
 </p>
 
-<p>Contact Information </br>
+<p>Contact Information:</br>
 * Email: chenmengdx@outlook.com </br>
 * WeChat: chenmengdx </br>
 * LinkedIn: <a href="https://cn.linkedin.com/in/meng-chen-50547a3a">Find Me at LinkedIn</a></br>
