--- a/index.html
+++ b/index.html
@@ -26,4 +26,8 @@ Before that, I was a Research Scientist at Dragon Research of <a href="http://ww
 In my spare time, I love traveling, reading, watching movies and playing soccer. I'm an amateur soccer player and my soccer career lasts more than 10 years. I'm a loyal fan of <a href="http://www.manutd.com/">Manchester United</a>.
 </p>
 
+<p style="text-align:justify;">
+Besides, I'm also serving as academic conference reviewers including AAAI 2021/2022, EMNLP 2021/2022, ACL 2021 etc.
+</p>
+
 </div>
