--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ In my spare time, I love traveling, reading, watching movies and playing soccer.
 </p>
 
 <p style="text-align:justify;">
-Besides, I'm also serving as academic conference reviewers including AAAI 2021/2022, EMNLP 2020/2021, ACL 2021/2022, NAACL 2022, Interspeech 2022 etc.
+Besides, I'm also serving as reviewers for several academic conferences including AAAI 2021/2022, EMNLP 2020/2021, ACL 2021/2022, NAACL 2022, Interspeech 2022 etc.
 </p>
 
 </div>
