--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ I'm currently a Technical Director at <a href="http://air.jd.com">JD AI</a> and 
 </p>
 
 <p style="text-align:justify;">
-Before that, I was a Research Scientist at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on computational linguistics and automatic speech recognition.I graduated from the Mutimodal Intelligence Joint Lab of <a href="http://www.ucas.ac.cn/">University of Chinese Academy of Sciences</a> and <a href="https://www.cuhk.edu.hk">The Chinese University of Hong Kong</a> in 2012. My supervisor was <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. Besides, I'm currently serving as the Programme Committee member for several top academic conferences including AAAI 2021/2022, ACL 2021/2022, EMNLP 2020/2021/2022, NAACL 2022, Interspeech 2022 etc.
+Before that, I was a Research Scientist at Dragon Research of <a href="http://www.nuance.com">Nuance Communications</a>. My research interests mainly focus on computational linguistics and automatic speech recognition. I graduated from the Multimodal Intelligence Joint Lab of <a href="http://www.ucas.ac.cn/">University of Chinese Academy of Sciences</a> and <a href="https://www.cuhk.edu.hk">The Chinese University of Hong Kong</a> in 2012. My supervisor was <a href="http://www.se.cuhk.edu.hk/people/hmmeng.html">Prof. Helen Meng</a>. Besides, I'm currently serving as the Programme Committee member for several top academic conferences including AAAI 2021/2022, ACL 2021/2022, EMNLP 2020/2021/2022, NAACL 2022, Interspeech 2022 etc.
 </p>
 
 <p style="text-align:justify;">
