--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Before that, I was a Research Scientist at Dragon Research of <a href="http://ww
 </p>
 
 <p style="text-align:justify;">
-I'm also serving as the Program Committee member for several top academic conferences including AAAI 2021/2022/2023/2024, ACL 2021/2022/2023, EMNLP 2020/2021/2022/2023, NAACL 2022, EACL 2023, ICASSP 2023/2024, Interspeech 2022/2023, ACM Multimedia 2023 etc. In my spare time, I love traveling, reading, watching movies and playing soccer. I'm an amateur soccer player and my soccer career lasts for more than 10 years. I'm a loyal fan of Manchester United. 
+I'm also serving as the Program Committee member for several top academic conferences including AAAI 2021/2022/2023/2024, ACL 2021/2022/2023, EMNLP 2020/2021/2022/2023, NAACL 2022/2024, EACL 2023, ICASSP 2023/2024, Interspeech 2022/2023, ACM Multimedia 2023 etc. In my spare time, I love traveling, reading, watching movies and playing soccer. I'm an amateur soccer player and my soccer career lasts for more than 10 years. I'm a loyal fan of Manchester United. 
 </p>
 
 </div>
